Adding extra fundamentei fields

--- a/notebooks/fundamentei.ipynb
+++ b/notebooks/fundamentei.ipynb
@@ -85,28 +85,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 216/216 [13:12<00:00,  3.67s/it]"
+      "100%|██████████| 216/216 [04:57<00:00,  1.38s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Ticker  Nome da Empresa Nota dos Usuários\n",
-      "VALE3  VALE3             Vale               4.3\n",
-      "PETR4  PETR4        Petrobras               3.7\n",
-      "ITUB4  ITUB4       Banco Itaú               4.9\n",
-      "BBDC4  BBDC4   Banco Bradesco               4.2\n",
-      "BBAS3  BBAS3  Banco do Brasil               4.7\n",
-      "...      ...              ...               ...\n",
-      "CSUD3  CSUD3              CSU               4.2\n",
-      "EUCA4  EUCA4          Eucatex               2.7\n",
-      "APER3  APER3    Alper Seguros                 2\n",
-      "ELMD3  ELMD3      Eletromidia               2.6\n",
-      "LAND3  LAND3      Terra Santa               3.8\n",
+      "      Ticker  Nome da Empresa Nota dos Usuários Num. de Votos\n",
+      "VALE3  VALE3             Vale               4.3           102\n",
+      "PETR4  PETR4        Petrobras               3.7            68\n",
+      "ITUB4  ITUB4       Banco Itaú               4.9           157\n",
+      "BBDC4  BBDC4   Banco Bradesco               4.2           124\n",
+      "BBAS3  BBAS3  Banco do Brasil               4.7           122\n",
+      "...      ...              ...               ...           ...\n",
+      "CSUD3  CSUD3              CSU               4.2            68\n",
+      "EUCA4  EUCA4          Eucatex               2.7            11\n",
+      "APER3  APER3    Alper Seguros                 2             1\n",
+      "ELMD3  ELMD3      Eletromidia               2.6             8\n",
+      "LAND3  LAND3      Terra Santa               3.8             4\n",
       "\n",
-      "[209 rows x 3 columns]\n",
-      "Filed stock tickers: ['AMAR3', 'BOAS3', 'SQIA3', 'ENBR3', 'MODL3', 'PARD3', 'BRPR3']\n"
+      "[208 rows x 4 columns]\n",
+      "Filed stock tickers: ['SOJA3', 'PINE4', 'BOAS3', 'SQIA3', 'ENBR3', 'MODL3', 'PARD3', 'BRPR3']\n"
      ]
     },
     {
@@ -133,7 +133,7 @@
     "        failed_tickers.append(stock_ticker)\n",
     "\n",
     "# show company infos retrieved from Fundamentei\n",
-    "print(stock_infos_df[stock_infos_df.columns[0:3]])\n",
+    "print(stock_infos_df[stock_infos_df.columns[0:4]])\n",
     "print(f\"Filed stock tickers: {failed_tickers}\")\n"
    ]
   },
