--- a/notebooks/stocks_filter.ipynb
+++ b/notebooks/stocks_filter.ipynb
@@ -52,9 +52,12 @@
     "    \"Ticker\",                #        VALE3\n",
     "    \"Nome da Empresa\",       #         Vale\n",
     "    \"Nota dos Usuários\",     #          4.3\n",
+    "    \"Num. de Votos\",         #          103\n",
     "    \"Segmento de Listagem\",  # Novo Mercado\n",
     "    \"Tag Along\",             #      100% ON\n",
     "    \"Free Float\",            #    76,48% ON\n",
+    "    \"Listagem CVM\",          #         2015\n",
+    "    \"Fundação\",              #         2019\n",
     "]]"
    ]
   },
@@ -103,7 +106,7 @@
     "    \"DIV. LIQ. / PATRI.\",                     #                0.26\n",
     "  # \"PSR\",                                    #                1.46\n",
     "  # \"P/CAP. GIRO\",                            #               58.34\n",
-    "    \"P. AT CIR. LIQ.\",                        #               -0.81\n",
+    "  # \"P. AT CIR. LIQ.\",                        #               -0.81\n",
     "    \"LIQ. CORRENTE\",                          #                1.08\n",
     "  # \"ROE\",                                    #               24.99\n",
     "  # \"ROA\",                                    #               10.66\n",
@@ -205,10 +208,10 @@
     "  # \"Cres. Rec (5a)\",      #              10.7%\n",
     "  # \"Giro Ativos\",         #               0.46\n",
     "  # \"Ativo\",               #     445621000000.0\n",
-    "    \"Dív. Bruta\",          #      70289000000.0\n",
-    "    \"Disponibilidades\",    #      20168000000.0\n",
+    "  # \"Dív. Bruta\",          #      70289000000.0\n",
+    "  # \"Disponibilidades\",    #      20168000000.0\n",
     "    \"Dív. Líquida\",        #      50121000000.0\n",
-    "    \"Ativo Circulante\",    #      73474000000.0\n",
+    "  # \"Ativo Circulante\",    #      73474000000.0\n",
     "    \"Patrim. Líq\",         #     190172000000.0\n",
     "  # \"Receita Líquida\",     #     206296000000.0\n",
     "  # \"EBIT\",                #      79954000000.0\n",
@@ -261,11 +264,11 @@
       "BBDC4  BBDC4   Banco Bradesco       Intermediários Financeiros\n",
       "BBAS3  BBAS3  Banco do Brasil       Intermediários Financeiros\n",
       "...      ...              ...                              ...\n",
-      "SQIA3    NaN              NaN                              NaN\n",
-      "ENBR3    NaN              NaN                              NaN\n",
-      "MODL3    NaN              NaN                              NaN\n",
       "PARD3    NaN              NaN                              NaN\n",
+      "PINE4    NaN              NaN       Intermediários Financeiros\n",
       "BRPR3    NaN              NaN                              NaN\n",
+      "HBRE3    NaN              NaN            Exploração de Imóveis\n",
+      "APER3    NaN              NaN            Previdência e Seguros\n",
       "\n",
       "[216 rows x 3 columns]\n"
      ]
@@ -279,9 +282,12 @@
     "    \"Subsetor\",                               # Minerais Metálicos\n",
     "\n",
     "    \"Nota dos Usuários\",                      #                4.3\n",
+    "    \"Num. de Votos\",                          #                130\n",
     "    \"Segmento de Listagem\",                   #       Novo Mercado\n",
     "    \"Tag Along\",                              #            100% ON\n",
     "    \"Free Float\",                             #          76,48% ON\n",
+    "    \"Listagem CVM\",                           #               2015\n",
+    "    \"Fundação\",                               #               2019\n",
     "\n",
     "    \"Vol Histórica\",                          #          26.264967\n",
     "    \"Tickers Opções\",                         #             1032.0\n",
@@ -322,12 +328,8 @@
     "    \"PASSIVOS / ATIVOS\",                      #               0.56\n",
     "    \"passivo_ativo_trend\",                    #           0.017564\n",
     "\n",
-    "    \"P. AT CIR. LIQ.\",                        #              -0.81\n",
     "    \"Div Br/ Patrim\",                         #               0.37\n",
-    "    \"Dív. Bruta\",                             #      70289000000.0\n",
-    "    \"Disponibilidades\",                       #      20168000000.0\n",
     "    \"Dív. Líquida\",                           #      50121000000.0\n",
-    "    \"Ativo Circulante\",                       #      73474000000.0\n",
     "    \"Patrim. Líq\",                            #     190172000000.0\n",
     "]]\n",
     "\n",
@@ -339,12 +341,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Store result data"
+    "----"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock_infos_df = stock_infos_df[~stock_infos_df['Ticker'].isna()]\n",
+    "stock_infos_df = stock_infos_df[~(stock_infos_df['Patrim. Líq'] < 0)]\n",
+    "stock_infos_df = stock_infos_df[~(stock_infos_df['Nota dos Usuários'] < 4)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Store result data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
