Script stocks_filter v2

--- a/notebooks/stocks_filter_v1.ipynb
+++ b/notebooks/stocks_filter_v1.ipynb
@@ -368,8 +368,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stock_infos_df.to_csv(\"../outputs/stocks_filter.csv\", sep=\";\")\n",
-    "stock_infos_df.to_excel(\"../outputs/stocks_filter.xlsx\")"
+    "stock_infos_df.to_csv(\"../outputs/stocks_filter_v1.csv\", sep=\";\")\n",
+    "stock_infos_df.to_excel(\"../outputs/stocks_filter_v1.xlsx\")"
    ]
   }
  ],
