Using fundamentei website javascript stocks list

--- a/notebooks/fundamentei.ipynb
+++ b/notebooks/fundamentei.ipynb
@@ -46,13 +46,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reading fundamentus tickers list\n",
-    "fundamentus_tickers = pandas.read_csv(\"../outputs/fundamentus.csv\", sep=\";\")[\"Papel\"]\n",
-    "fundamentus_tickers.columns = ['stock_ticker']\n",
+    "# You can run the following javascript command to get the list direct from the https://fundamentei.com/ website\n",
+    "# COMMAND:\n",
+    "#   tickers = []; document.querySelectorAll(\"#__next > div > div > div > div > a > div > div > div > div.rounded-md\").forEach(element => tickers.push(element.innerText)); console.log(tickers.join(\",\"));\n",
     "\n",
-    "# reading status invest tickers list\n",
-    "statusinvest_tickers = pandas.read_csv(\"../outputs/statusinvest.csv\", sep=\";\")[\"TICKER\"]\n",
-    "statusinvest_tickers.columns = ['stock_ticker']"
+    "stock_tickers = None\n",
+    "stock_tickers = \"PETR,ITUB,VALE,ABEV,BPAC,WEGE,BBAS,BBDC,ITSA,SANB,ELET,VIVT,SUZB,B3SA,BBSE,RDOR,RENT,SBSP,JBSS,CXSE,RADL,TIMS,RAIL,RAIZ,PRIO,CPFE,EQTL,GGBR,EGIE,CSAN,UGPA,CMIN,HAPV,CCRO,CPLE,CRFB,BRFS,VBBR,CMIG,KLBN,NTCO,ENGI,NEOE,EMBR,HYPE,CSNA,BRKM,ENEV,PSSA,ASAI,TRPL,TOTS,GMAT,EQPA,CEGR,ENMT,SMFT,MULT,LREN,MGLU,REDE,ALOS,CIEL,MDIA,CGAS,INBR,GGPS,TAEE,USIM,AURE,BPAN,GOAU,CEEB,STBP,SMTO,ALUP,VAMO,BNBR,EKTR,CYRE,MRFG,SLCE,FLRY,PORT,BRAP,POMO,SAPR,CSMG,ENAT,RRRP,IGTI,INTB,ODPV,ARZZ,SIMH,UNIP,RECV,WHRL,DXCO,ALPA,AESB,VIVA,ECOR,SRNA,CURY,SOMA,BRSR,GRND,ABCB,GOLL,YDUQ,DASA,TTEN,BAZA,ONCO,SHUL,COGN,AZUL,VULC,FRAS,MOAR,ARML,LEVE,MRVE,DIRR,BEEF,CSRN,BSLI,TUPY,LOGN,RAPT,GUAR,COCE,GPAR,EZTC,FESA,JSLG,LWSA,MOVI,MILS,IRBR,ORVR,SBFG,CBEE,CAML,CEAB,JHSF,BEES,CBAV,PLPL,HBSA,AMBP,AURA,BMEB,CLSC,MATD,GEPA,VVEO,AGRO,JALL,LOGG,ELMD,PETZ,RANI,BLAU,SOJA,MYPK,BMGB,TFCO,LIGT,ANIM,CVCB,TGMA,PNVL,KEPL,LAVV,MLAS,TASA,CSED,EVEN,DESK,BRIT,LAND,TEND,EUCA,PCAR,PGMN,SCAR,VLID,FIQE,CEBR,VSTE,BRBI,SYNE,OFSA,OPCT,PINE,FRIO,POSI,LJQQ,BMOB,DEXP,ROMI,TELB,BRIV,MDNE,TRIS,WIZC,VITT,CRPG,ZAMP,PTBL,ALPK,EMAE,BRGE,MELK,BIOM,WLMM,SEER,CSUD,AALR,APER,CLSA,AVLL,BHIA,PEAB,LIPR,RPAD,ALLD,CRIV,QUAL,AERI,PFRM,KRSA,PATI,CASH,IFCM,HBRE,MEAL,GFSA,MTSA,CGRA,MTRE,PRNR,AMER,PTNT,ETER,DOHL,AFLT,OIBR,BGIP,CAMB,HBOR,ESPA,ENJU,DMVF,HBTS,BOBR,CEDO,FHER,LPSB,RNEW,AGXY,GPIV,TECN,MSPA,NINJ,MGEL,NGRD,TKNO,LVTC,MBLY,EALT,TRAD,BAHI,JOPA,TCSA,G2DI,MERC,AZEV,PDTC,PMAM,UCAS,RDNI,BMKS,TPIS,SEQL,SHOW,RPMG,MNPR,AHEB,AMAR,CTNM,RCSL,WEST,INEP,EPAR,PLAS,CTKA,SOND,MNDL,BALM,HOOT,BMIN,VIVR,NUTR,SNSY,LUPA,DOTZ,CALI,ATMP,RSID,NORD,CTSA,DTCY,ATOM,BAUH,SGPS,JFEN,LUXM,ESTR,FIEI,RSUL,PDGR,TEKA,GSHP,HAGA,TXRX,HETA,MWET,BDLL,OSXB,NEXP,MAPT,FRTA,PSVM,PPLA\".split(\",\")"
    ]
   },
   {
@@ -61,8 +60,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get deduped tickers list\n",
-    "stock_tickers = pandas.concat([fundamentus_tickers, statusinvest_tickers]).drop_duplicates().values"
+    "# If the list is not pre defined, get stock list from other processes outputs\n",
+    "if not stock_tickers:\n",
+    "    # reading fundamentus tickers list\n",
+    "    fundamentus_tickers = pandas.read_csv(\"../outputs/fundamentus.csv\", sep=\";\")[\"Papel\"]\n",
+    "    fundamentus_tickers.columns = ['stock_ticker']\n",
+    "\n",
+    "    # reading status invest tickers list\n",
+    "    statusinvest_tickers = pandas.read_csv(\"../outputs/statusinvest.csv\", sep=\";\")[\"TICKER\"]\n",
+    "    statusinvest_tickers.columns = ['stock_ticker']\n",
+    "\n",
+    "    # get deduped tickers list\n",
+    "    stock_tickers = pandas.concat([fundamentus_tickers, statusinvest_tickers]).drop_duplicates().values"
    ]
   },
   {
@@ -85,28 +94,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 216/216 [04:57<00:00,  1.38s/it]"
+      "100%|██████████| 337/337 [08:04<00:00,  1.44s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Ticker  Nome da Empresa Nota dos Usuários Num. de Votos\n",
-      "VALE3  VALE3             Vale               4.3           102\n",
-      "PETR4  PETR4        Petrobras               3.7            68\n",
-      "ITUB4  ITUB4       Banco Itaú               4.9           157\n",
-      "BBDC4  BBDC4   Banco Bradesco               4.2           124\n",
-      "BBAS3  BBAS3  Banco do Brasil               4.7           122\n",
-      "...      ...              ...               ...           ...\n",
-      "CSUD3  CSUD3              CSU               4.2            68\n",
-      "EUCA4  EUCA4          Eucatex               2.7            11\n",
-      "APER3  APER3    Alper Seguros                 2             1\n",
-      "ELMD3  ELMD3      Eletromidia               2.6             8\n",
-      "LAND3  LAND3      Terra Santa               3.8             4\n",
+      "     Ticker       Nome da Empresa         Setor de Atuação Nota dos Usuários\n",
+      "PETR   PETR             Petrobras  Petróleo e Gás - Refino               3.8\n",
+      "ITUB   ITUB                  Itaú                   Bancos               4.9\n",
+      "VALE   VALE                  Vale                Mineração               4.3\n",
+      "ABEV   ABEV                 Ambev                  Bebidas               4.4\n",
+      "BPAC   BPAC           BTG Pactual                   Bancos               4.3\n",
+      "...     ...                   ...                      ...               ...\n",
+      "NEXP   NEXP                 Nexpe    Exploração de Imóveis                 1\n",
+      "MAPT   MAPT  Cemepe Investimentos                  Holding                 0\n",
+      "FRTA   FRTA           Pomi Frutas     Alimentos - Variados               1.7\n",
+      "PSVM   PSVM         Porto Sudeste    Logística e Portuário                 0\n",
+      "PPLA   PPLA                  PPLA                  Holding                 0\n",
       "\n",
-      "[208 rows x 4 columns]\n",
-      "Filed stock tickers: ['SOJA3', 'PINE4', 'BOAS3', 'SQIA3', 'ENBR3', 'MODL3', 'PARD3', 'BRPR3']\n"
+      "[336 rows x 4 columns]\n",
+      "Filed stock tickers: ['PMAM']\n"
      ]
     },
     {
